<resources>
    <string name="app_name">BOE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--Start Login and Register-->
    <string name="login_text_btn_login">Đăng nhập</string>
    <string name="login_text_input_username">Tài khoản</string>
    <string name="login_text_input_password">Mật khẩu</string>
    <string name="login_text_btn_register">Đăng ký</string>
    <string name="login_text_as_guest"><u>Đăng nhập với tài khoản khách</u></string>
    <string name="register_text_input_confirm_password">Nhập lại mật khẩu</string>
    <!--End Login and Rgister-->

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="item_image_transition">item_image_transition</string>
    <string name="item_cart_sum">Tổng cộng:</string>
    <string name="scan_qr_code_fragment">Scan QR Code</string>
    <string name="cutlery_fragment">Món ăn</string>
    <string name="drinking_fragment">Nước</string>
    <string name="order_fragment">Giỏ</string>
    <string name="history_fragment">Lịch sử</string>


    <string name="text_clear_all"><u>Clear all</u></string>
    <string name="text_submit">Submit</string>
    <string name="text_not_available_network">Kết nối của bạn không khả dụng</string>
    <string name="text_server_maintanance">Hệ thống đang bảo trì</string>
    <string name="text_processing">Đang xử lý...</string>
    <string name="bill_text">Hóa đơn</string>
    <string name="text_info_bill_amount">Tổng cộng</string>
    <string name="text_info_bill_title_diner">Thực khách</string>
    <string name="text_info_bill_title_oreder_date">Ngày ăn</string>
    <string name="text_info_bill_title_items">Số món</string>
    <string name="text_info_bill_title_payment_method">Phương thức thanh toán</string>

    <string name="text_loading">Đang tải...</string>
    <string name="text_description_pay_back">Hiện tại, chúng tôi không còn phục vụ các món ăn bên dưới. Xin quý khách liên hệ quản lý để làm thủ tục hoàn tiền.</string>
    <string name="text_description_dish_not_available_paypal">Chúng tôi không còn phục vụ các món ăn bên dưới. Bạn có muốn tiếp tục dùng bữa.</string>

    <string name="text_description_after_order">Chúng tôi không còn phục vụ các món ăn bên dưới. Xin quý khách thông cảm.\nBạn có muốn tiếp tục thanh toán?</string>
    <string name="text_description_payback_money">* Hệ thống sẽ tự động hoàn tiền dựa trên lựa chọn của bạn</string>
    <string name="text_no_result_found">Không tìm thấy kết quả</string>

    <!--Start Drawer Navigation-->
    <string name="drawer_title_information">Thông tin</string>
    <string name="drawer_title_configuration">Tùy chỉnh</string>
    <string name="drawer_text_sign_out">Đăng xuất</string>
    <string name="drawer_text_profile">Trang cá nhân</string>
    <string name="drawer_text_language">Ngôn ngữ</string>
    <string name="drawer_text_feedback">Góp ý</string>
    <string name="drawer_text_api">API</string>
    <string name="drawer_text_scan_table">Quét mã bàn</string>
    <!--End Drawer Navigation-->

    <!--Start Bottom Navigation-->
    <string name="bottom_nav_text_cutlery">Món ăn</string>
    <string name="bottom_nav_text_drinking">Nước</string>
    <string name="bottom_nav_text_order">Giỏ</string>
    <string name="bottom_nav_text_history">Lịch sử</string>
    <!--End Bottom Navigation-->

    <!--Start Button-->
    <string name="text_btn_description_before_order">Chúng tôi không còn phục vụ các món ăn bên dưới. Xin quý khách thông cảm.</string>
    <string name="text_btn_continue">Tiếp tục</string>
    <string name="text_btn_order">Thêm vào giỏ</string>
    <string name="text_btn_close">Đóng</string>
    <string name="text_btn_select_language">Chọn ngôn ngữ</string>
    <string name="text_btn_apply_config">Áp dụng</string>
    <string name="text_btn_delete">Hủy giỏ hàng</string>
    <string name="text_btn_stop_eating">Hủy hóa đơn</string>
    <!--End Button-->

    <!--Start Information-->
    <string name="text_info_no_history">K</string>
    <string name="text_info_stop_serving">Nhà Hàng Đã ngưng phục vụ</string>
    <string name="text_info_empty_cart">Bạn chưa chọn món</string>
    <string name="text_info_searching">Đang tìm kiếm...</string>
    <string name="text_info_search_cutlery">Tìm kiếm món ăn</string>
    <string name="text_info_search_drinking">Tìm kiếm thức uống</string>
    <string name="text_search_default">Tìm kiếm</string>
    <string name="text_info_notification_annoucement">Nhà hàng BOE trân trọng thông báo</string>
    <string name="text_info_notification_description">Hiện tại chúng tôi không còn phục vụ...</string>
    <string name="text_info_notification_ignore">Ignore</string>
    <string name="text_info_dish">món</string>
    <string name="text_info_dishes">món</string>
    <string name="text_info_refunding_bill">Hệ thống đang hoàn tác tiền món ăn</string>
    <string name="text_btn_bill_pay">Thanh toán</string>
    <string name="text_info_scan_qr_code">Scan QR code and get menu</string>
    <string name="text_info_processing">Đang xử lý...</string>
    <string name="text_info_no_search_result">Không tìm thấy kết quả</string>
    <string name="text_info_checkout">Thanh Toán</string>
    <string name="text_toast_maximum_quantity">Bạn đã đặt tối đa số lượng</string>
    <string name="text_toast_minimum">Bạn phải đặt tổi thiểu là một</string>
    <string name="text_dialog_title_remove_dish">Quý khách có muốn hủy toàn bộ món ăn</string>
    <string name="text_dialog_negative_button">CÓ</string>
    <string name="text_dialog_positive_button">KHÔNG</string>
    <string name="text_nav_header_layout_table">Bàn&#160;</string>
    <string name="text_btn_update">Cập nhật</string>
    <string name="text_search_dish_not_serve">Món ăn tìm kiếm đã ngưng phục vụ</string>
    <string name="text_notification_refund">Hoàn tiền món ăn...</string>
    <string name="text_profile_username">Username</string>
    <string name="text_profile_full_name_title">Full Name</string>
    <string name="text_profile_full_name_h">Your name</string>
    <string name="text_profile_phone">Phone</string>
    <string name="text_profile_phone_hint">Your phone number</string>
    <string name="text_response_error_msg">The server is under maintenance</string>
    <string name="text_response_error_connection">The connection has a error</string>
    <string name="text_response_error_not_process">The server can not process this request</string>
    <string name="text_select_payment_method">Select payment method</string>
    <string name="text_balance">Số dư:\u0020</string>
    <string name="text_navi_add_voucher">Nạp tài khoản</string>
    <string name="text_recharge">Nạp tiền</string>
    <string name="text_input_username">Username</string>
    <string name="text_input_pwd">Password</string>
    <string name="text_titla_balance">Balance</string>
    <string name="text_current_balance">YOUR BALANCE</string>
    <string name="text_voucher_btn_add">ADD</string>
    <string name="text_voucher_btn_refresh">REFRESH</string>
    <string name="text_action_bar_add_prepaidcode">VOUCHER</string>
    <string name="text_dialog_feedback">Feedback</string>
    <string name="text_feedback_rating">Your rating</string>
    <string name="text_feedback_short">Write a short feedback</string>
    <string name="text_feedback_et">Tell us what do you think</string>
    <string name="text_s">S</string>
    <string name="text_paypal_order_success">Order successfully</string>
    <string name="text_go_to_m">GO TO MENU</string>
    <string name="txt_minus_dish">Select dish you want to remove</string>
    <string name="txt_minus_remove">Remove</string>
    <string name="txt_dish_blank">Dish with no description</string>

    <!--End Information-->
</resources>
