<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/drawer_title_information">
        <menu>
            <group
                android:id="@+id/menu_personal"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/profile"
                    android:icon="@drawable/ic_nav_profile"
                    android:title="@string/drawer_text_profile"/>
                <!--<item-->
                <!--android:id="@+id/order"-->
                <!--android:icon="@drawable/ic_nav_profile"-->
                <!--android:title="Order"/>-->
            </group>
        </menu>
    </item>
    <item android:title="@string/drawer_title_configuration">
        <menu>
            <group
                android:id="@+id/menu_page"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/setting"
                    android:icon="@drawable/ic_qr_code_variant"
                    android:title="@string/drawer_text_scan_table"/>
                <item
                    android:id="@+id/addVoucher"
                    android:icon="@drawable/ic_coupon"
                    android:title="@string/text_navi_add_voucher"/>
                <item
                    android:id="@+id/feedback"
                    android:icon="@drawable/ic_star"
                    android:title="@string/drawer_text_feedback"/>
                <item
                    android:id="@+id/language"
                    android:icon="@drawable/ic_language_black"
                    android:title="@string/drawer_text_language"/>
                <item
                    android:id="@+id/logOut"
                    android:icon="@drawable/ic_nav_sign_out"
                    android:title="@string/drawer_text_sign_out"/>
            </group>
        </menu>
    </item>
</menu>