<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="amount"
            type="String"/>

        <variable
            name="customerName"
            type="String"/>

        <variable
            name="orderDate"
            type="String"/>

        <variable
            name="itemQuantity"
            type="String"/>
    </data>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        tools:context="com.nux.dhoan9.firstmvvm.view.activity.PaypalActivity">

        <RelativeLayout
            android:id="@+id/rlProcessingRollBack"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#66000000"
            android:elevation="6dp"
            android:visibility="gone">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="16dp"
                android:padding="16dp"
                app:cardBackgroundColor="#FFF"
                app:cardElevation="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:paddingBottom="4dp"
                    android:paddingTop="4dp">

                    <com.wang.avi.AVLoadingIndicatorView
                        android:id="@+id/aviTop"
                        style="@style/AVLoadingIndicatorView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="visible"
                        app:indicatorColor="@color/colorAccent"
                        app:indicatorName="BallTrianglePathIndicator"
                        />

                    <TextView
                        android:id="@+id/tvProcessingRollBack"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/aviTop"
                        android:layout_alignTop="@+id/aviTop"
                        android:layout_marginLeft="24dp"
                        android:layout_toRightOf="@+id/aviTop"
                        android:gravity="center"
                        android:text="@string/text_info_refunding_bill"
                        android:textSize="16sp"/>
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </RelativeLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            app:cardBackgroundColor="#ffffff"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tvMsg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Your money is not\nenough for payment"
                    android:textColor="@android:color/holo_red_light"
                    android:visibility="gone"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="8dp"
                        android:text="@string/text_info_bill_amount"
                        android:textAllCaps="true"
                        android:textSize="@dimen/size_large_text"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tvAmount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="4dp"
                        android:text="Customer name"
                        android:textSize="@dimen/size_medium_text"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_info_bill_title_diner"
                        android:textAllCaps="true"
                        android:textSize="@dimen/size_large_text"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tvDinerName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="Customer name"
                        android:textSize="@dimen/size_medium_text"/>

                    <RelativeLayout
                        android:id="@+id/rlBalance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:orientation="vertical"
                        android:visibility="visible">

                        <TextView
                            android:id="@+id/tvTitleBalance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_titla_balance"
                            android:textAllCaps="true"
                            android:textSize="@dimen/size_large_text"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/tvBalance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tvTitleBalance"
                            android:layout_marginTop="4dp"
                            android:text="4000"
                            android:textSize="@dimen/size_medium_text"/>

                        <TextView
                            android:id="@+id/tvRecharge"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@+id/tvBalance"
                            android:layout_alignParentRight="true"
                            android:text="@string/text_recharge"
                            android:textColor="@color/order_green"
                            android:textSize="@dimen/size_medium_text"/>
                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/text_info_bill_title_oreder_date"
                        android:textAllCaps="true"
                        android:textSize="@dimen/size_large_text"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tvOrderDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="Customer name"
                        android:textSize="@dimen/size_medium_text"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/text_info_bill_title_items"
                        android:textAllCaps="true"
                        android:textSize="@dimen/size_large_text"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tvItemQuantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="2 Items"
                        android:textSize="@dimen/size_medium_text"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/text_info_bill_title_payment_method"
                        android:textAllCaps="true"
                        android:textSize="@dimen/size_large_text"
                        android:textStyle="bold"/>

                    <Spinner
                        android:id="@+id/spinnerPayment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginTop="16dp"
                        android:entries="@array/payment_array"
                        android:prompt="@string/text_select_payment_method"
                        android:textAlignment="center"
                        android:textSize="@dimen/medium_space"/>

                    <!--<TextView-->
                    <!--android:id="@+id/tvPaymentMethod"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginTop="4dp"-->
                    <!--android:text="Paypal"-->
                    <!--android:textSize="@dimen/size_medium_text"/>-->
                </LinearLayout>

                <Button
                    android:id="@+id/btnPay"
                    style="@style/PayButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/text_btn_bill_pay"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/rlProcessing"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#66000000"
                        android:elevation="6dp"
                        android:visibility="gone">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:padding="16dp"
                app:cardBackgroundColor="#FFF"
                app:cardElevation="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:paddingBottom="4dp"
                    android:paddingTop="4dp">

                    <com.wang.avi.AVLoadingIndicatorView
                        android:id="@+id/avi"
                        style="@style/AVLoadingIndicatorView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="visible"
                        app:indicatorColor="@color/colorAccent"
                        app:indicatorName="BallTrianglePathIndicator"
                        />

                    <TextView
                        android:id="@+id/tvProcessingTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/avi"
                        android:layout_alignTop="@+id/avi"
                        android:layout_marginLeft="24dp"
                        android:layout_toRightOf="@+id/avi"
                        android:gravity="center|left"
                        android:text="12asdasdas"
                        android:textSize="16sp"/>
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </RelativeLayout>
    </RelativeLayout>
</layout>
